fix info box overflow

--- a/ds_judgements_public_ui/sass/includes/govuk_overrides/_warning_text.scss
+++ b/ds_judgements_public_ui/sass/includes/govuk_overrides/_warning_text.scss
@@ -30,10 +30,6 @@
   font-weight: $typography-normal-font-weight;
 
   background-color: brand-colour("pastel-blue");
-
-  @media (min-width: $grid-breakpoint-medium) {
-    width: 100%;
-  }
 }
 
 .govuk-warning-text.govuk-warning-text--information {
